Left and right arrow navigation still doesn't work on photo grid demo at codinginparadise.org
Categories
(Core :: SVG, defect)
Tracking
()
People
(Reporter: dholbert, Assigned: emilio)
References
(Regression, )
Details
(Keywords: regression, testcase)
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1459905 +++
[Spinning this off of Bug 1459905, which had a reduced testcase & a patch land to address that testcase, but apparently the original STR/URL is still broken.]
[Steps to reproduce]:
- Launch Firefox.
- Visit http://codinginparadise.org/projects/svgweb/samples/demo.html?name=photos&svg.render.forceflash=false
- Click on the left "<" and right buttons ">", below the "Show Demos Known to Fail" text.
[Expected result]:
- The photo is moved accordingly.
[Actual result]:
- Nothing happens when clicking on the right and left buttons.
Reporter | ||
Updated•3 years ago
|
Reporter | ||
Comment 1•3 years ago
|
||
Actually, the "up" and "down" buttons (^/v) on this site also seem to have no effect in current Nightly, too (whereas those ones were fine in Nightly 2020-08-25).
That feels unexpected, and it could indicate that bug 1459905's patch somehow took us a step away from correctness (at least as far as this demo is concerned).
Robert, perhaps you could take a look / do you know why the behavior might've changed in this way?
Comment 2•3 years ago
|
||
If you zoom first then everything suddenly starts to work so I really don't know what's going on with the site.
Assignee | ||
Comment 3•3 years ago
|
||
We're not reacting properly to the dynamic change of currentTranslate
. But the change is reflected in the JS objects.
Assignee | ||
Comment 5•3 years ago
|
||
Comment 6•3 years ago
|
||
Thanks for looking into this Emilio.
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a955374449f8 Fix SVGSVGElement::QueryInterface. r=longsonr
Comment 8•3 years ago
|
||
bugherder |
Comment 9•3 years ago
|
||
Hi guys,
So I checked this bug on Windows 10 on Nightly 82.0a1 (2020-08-31) (64-bit) and it's been fixed.
Regards, Flor.
Updated•3 years ago
|
Updated•3 years ago
|
Description
•