Bug 1661509 - Fix SVGSVGElement::QueryInterface. r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D88475